.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:22:04 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'utn_getString':
..\src\utn.c:289:42: warning: argument to 'sizeof' in 'strncpy' call is the same expression as the destination; did you mean to provide an explicit length? [-Wsizeof-pointer-memaccess]
    strncpy(pResultado,bufferString,sizeof(pResultado));
                                          ^
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
09:24:03 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funcionesFedeCardozo.o" "..\\src\\funcionesFedeCardozo.c" 
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
11:15:46 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funcionesFedeCardozo.o" "..\\src\\funcionesFedeCardozo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'utn_getString':
..\src\utn.c:282:42: warning: argument to 'sizeof' in 'strncpy' call is the same expression as the destination; did you mean to provide an explicit length? [-Wsizeof-pointer-memaccess]
    strncpy(pResultado,bufferString,sizeof(pResultado));
                                          ^
..\src\utn.c: In function 'getString':
..\src\utn.c:302:6: error: too few arguments to function 'esNumerica'
   && esNumerica(charAuxiliar)==0){
      ^~~~~~~~~~
..\src\utn.c:69:12: note: declared here
 static int esNumerica(char* cadena, int limite)
            ^~~~~~~~~~
..\src\utn.c:304:46: warning: argument to 'sizeof' in 'strncpy' call is the same expression as the destination; did you mean to provide an explicit length? [-Wsizeof-pointer-memaccess]
   strncpy(pletrasTomadas, charAuxiliar,sizeof(pletrasTomadas));
                                              ^
11:16:17 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c:296:1: warning: "/*" within comment [-Wcomment]
 /*int getString(char*pletrasTomadas)
  
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
Info: Nothing to build for funcionesFedeCardozo
11:20:07 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
11:20:32 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funcionesFedeCardozo.o" "..\\src\\funcionesFedeCardozo.c" 
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
11:23:07 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
Info: Nothing to build for funcionesFedeCardozo
11:26:45 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funcionesFedeCardozo.o" "..\\src\\funcionesFedeCardozo.c" 
..\src\funcionesFedeCardozo.c: In function 'main':
..\src\funcionesFedeCardozo.c:13:2: error: too few arguments to function 'utn_getString'
  utn_getString(palabra, "Escriba", "Te equivocaste");
  ^~~~~~~~~~~~~
In file included from ..\src\funcionesFedeCardozo.c:4:0:
..\src\utn.h:20:5: note: declared here
 int utn_getString(char* pResultado, char* mensaje, char* mensajeError,int longitud);
     ^~~~~~~~~~~~~
11:27:07 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funcionesFedeCardozo.o" "..\\src\\funcionesFedeCardozo.c" 
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
12:10:39 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\funcionesFedeCardozo.o" "..\\src\\funcionesFedeCardozo.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'utn_getString':
..\src\utn.c:286:7: error: too few arguments to function 'getString'
    if(getString(bufferString)==0){
       ^~~~~~~~~
..\src\utn.c:10:12: note: declared here
 static int getString(char* pResultado,int longitud);
            ^~~~~~~~~
..\src\utn.c: In function 'sonLetras':
..\src\utn.c:337:22: warning: comparison between pointer and integer
   if(i==0 && (pLetras>'A'&&pLetras<'Z')){
                      ^
..\src\utn.c:337:35: warning: comparison between pointer and integer
   if(i==0 && (pLetras>'A'&&pLetras<'Z')){
                                   ^
..\src\utn.c:343:14: warning: comparison between pointer and integer
   if(pLetras < 'a' || pLetras>'z'){
              ^
..\src\utn.c:343:30: warning: comparison between pointer and integer
   if(pLetras < 'a' || pLetras>'z'){
                              ^
12:11:20 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\estructuras.o" "..\\src\\estructuras.c" 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c:242:5: error: conflicting types for 'utn_getCaracter'
 int utn_getCaracter(char* pResultado, char* mensaje, char* mensajeError, int minimo, int maximo, int reintentos){
     ^~~~~~~~~~~~~~~
In file included from ..\src\utn.c:2:0:
..\src\utn.h:19:5: note: previous declaration of 'utn_getCaracter' was here
 int utn_getCaracter(char* pResultado, char* mensaje, char* mensajeError);
     ^~~~~~~~~~~~~~~
12:11:20 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'sonLetras':
..\src\utn.c:336:22: warning: comparison between pointer and integer
   if(i==0 && (pLetras>'A'&&pLetras<'Z')){
                      ^
..\src\utn.c:336:35: warning: comparison between pointer and integer
   if(i==0 && (pLetras>'A'&&pLetras<'Z')){
                                   ^
..\src\utn.c:342:14: warning: comparison between pointer and integer
   if(pLetras < 'a' || pLetras>'z'){
              ^
..\src\utn.c:342:30: warning: comparison between pointer and integer
   if(pLetras < 'a' || pLetras>'z'){
                              ^
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
12:12:42 **** Incremental Build of configuration Debug for project estructuras ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c:242:5: error: conflicting types for 'utn_getCaracter'
 int utn_getCaracter(char* pResultado, char* mensaje, char* mensajeError, int minimo, int maximo, int reintentos){
     ^~~~~~~~~~~~~~~
In file included from ..\src\utn.c:2:0:
..\src\utn.h:19:5: note: previous declaration of 'utn_getCaracter' was here
 int utn_getCaracter(char* pResultado, char* mensaje, char* mensajeError);
     ^~~~~~~~~~~~~~~
12:12:42 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
Info: Nothing to build for funcionesFedeCardozo
12:19:04 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
12:23:04 **** Incremental Build of configuration Debug for project funcionesFedeCardozo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
gcc -o funcionesFedeCardozo.exe "src\\funcionesFedeCardozo.o" "src\\operaciones.o" "src\\utn.o" 
Info: Nothing to build for funcionesFedeCardozo
